--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 attrs==25.3.0
+channels==4.2.2
+channels_redis==4.2.1
 Django==5.2.3
 django-filter==25.1
 djangorestframework==3.16.0
@@ -9,11 +11,13 @@ drf-yasg==1.21.10
 inflection==0.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+msgpack==1.1.1
 packaging==25.0
 pillow==11.2.1
 PyJWT==2.9.0
 pytz==2025.2
 PyYAML==6.0.2
+redis==6.2.0
 referencing==0.36.2
 rpds-py==0.26.0
 sqlparse==0.5.3
